# LeKickerFou

./: .env.dist  .env.example  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.lockold  Cargo.toml  Dockerfile  LICENSE  README copy.md  README.md  full-test.json  index.js  package-lock.json  package.json  test.json  test_config.sh  whitelist.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: architecture.md
src/: error.rs  lib.rs  main.rs  utils.rs
src/bot/: handler.rs  mod.rs  voice_manager.rs  warning.rs
src/config/: args.rs  mod.rs  settings.rs  versioning.rs
src/handler/: commands.rs  interactions.rs  mod.rs
src/history/: backup_manager.rs  mod.rs  restore.rs
src/logging/: discord_logger.rs  levels.rs  mod.rs
src/permissions/: mod.rs  validator.rs  whitelist.rs
src/scheduler/: mod.rs
