[package]
name = "lekickerfou"
version = "1.0.0"
edition = "2021"
authors = ["bourbask <votre.email@domain.com>"]
description = "Bot Discord pour déconnecter automatiquement les utilisateurs des salons vocaux"
documentation = "https://github.com/bourbask/LeKickerFou"
repository = "https://github.com/bourbask/LeKickerFou"
license = "MIT"
keywords = ["discord", "bot", "voice", "automation", "rust"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "http", "rustls_backend"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-cron-scheduler = "0.14"
dotenvy = "0.15.7"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.21"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "lekickerfou"
path = "src/main.rs"
